# scootui-qt

./: .gitignore  CMakeLists.txt  Makefile  README.md  cross-build.sh  run-desktop.sh
.github/workflows/: build-dbc-rpm.yml  check-schema-coverage.yml
assets/routes/: route1.json  route1_de.json  route2.json  route2_de.json  route3.json  route3_de.json  route4.json  route4_de.json  route5_de.json  route6.json  route6_de.json
assets/styles/: mapdark.json  maplight.json
docker/: Dockerfile.crossbuild
qml/: Main.qml
qml/overlays/: AutoLockCountdownOverlay.qml  BluetoothPinCodeOverlay.qml  DebugOverlay.qml  HopOnLearnOverlay.qml  HopOnLockOverlay.qml  ManualHibernationOverlay.qml  MenuItem.qml  MenuOverlay.qml  OdometerMilestoneOverlay.qml  ShortcutMenuOverlay.qml  ToastOverlay.qml  UmsOverlay.qml  VersionOverlay.qml
qml/screens/: AboutScreen.qml  AddressSelectionScreen.qml  BmxDebugScreen.qml  ClusterScreen.qml  DebugScreen.qml  DestinationScreen.qml  FaultsScreen.qml  HopOnInfoScreen.qml  MaintenanceScreen.qml  MapScreen.qml  NavigationSetupScreen.qml  OtaBackgroundScreen.qml  UpdateModeInfoScreen.qml
qml/simulator/: SimulatorWindow.qml
qml/theme/: Theme.qml
qml/widgets/blinker/: BlinkerOverlay.qml
qml/widgets/cluster/: BlinkerRow.qml  ClusterBottomBar.qml
qml/widgets/components/: ControlHints.qml  FrostedGlass.qml  MaterialIcon.qml  MilestoneConfettiLayer.qml  OtaStatusIcon.qml  SvgIcon.qml  TintedImage.qml  qmldir
qml/widgets/indicators/: IndicatorLight.qml  IndicatorLights.qml  RoadNameDisplay.qml  SpeedLimitIndicator.qml  StatusIndicators.qml
qml/widgets/map/: MapViewContent.qml  MapViewContentLegacy.qml  MapViewWidget.qml  NorthIndicator.qml  ScaleBar.qml  VehicleMarker.qml
qml/widgets/navigation/: NavigationStatusOverlay.qml  RoundaboutIcon.qml  RoundaboutIconFromMap.qml  TurnByTurnWidget.qml
qml/widgets/power/: PowerDisplay.qml
qml/widgets/shutdown/: ShutdownOverlay.qml
qml/widgets/speedometer/: SpeedometerDisplay.qml
qml/widgets/status_bars/: BatteryDisplay.qml  BatteryIcon.qml  SpeedCenterWidget.qml  TopStatusBar.qml  UnifiedBottomStatusBar.qml
scripts/: check-schema-coverage.sh  subset-fonts.sh
src/: main.cpp
src/core/: AppConfig.h  Application.cpp  Application.h  EnvConfig.cpp  EnvConfig.h
src/l10n/: Translations.cpp  Translations.h
src/models/: Enums.h  MapMetadata.h  MenuNode.h  RecentDestination.h  SavedLocation.h
src/repositories/: HiredisAdapter.h  HiredisWorker.cpp  HiredisWorker.h  InMemoryMdbRepository.cpp  InMemoryMdbRepository.h  MdbRepository.h  RedisMdbRepository.cpp  RedisMdbRepository.h
src/routing/: RouteHelpers.h  RouteModels.h  ValhallaClient.cpp  ValhallaClient.h
src/services/: AddressDatabaseService.cpp  AddressDatabaseService.h  AutoThemeService.cpp  AutoThemeService.h  BluetoothHealthMonitor.cpp  BluetoothHealthMonitor.h  FlatTrie.cpp  FlatTrie.h  GestureSynth.cpp  GestureSynth.h  HandlebarLockMonitor.cpp  HandlebarLockMonitor.h  InputHandler.cpp  InputHandler.h  LowTemperatureMonitor.cpp  LowTemperatureMonitor.h  MapDownloadService.cpp  MapDownloadService.h  MapService.cpp  MapService.h  NavigationAvailabilityService.cpp  NavigationAvailabilityService.h  NavigationService.cpp  NavigationService.h  OdometerMilestoneService.cpp  OdometerMilestoneService.h  RecentDestinationsService.cpp  RecentDestinationsService.h  ReverseGeocodingService.cpp  ReverseGeocodingService.h  RoadInfoService.cpp  RoadInfoService.h  SavedLocationsService.cpp  SavedLocationsService.h  SerialNumberService.cpp  SerialNumberService.h  SettingsService.cpp  SettingsService.h  SystemInfoService.cpp  SystemInfoService.h  (+4 more)
src/simulator/: SimulatorService.cpp  SimulatorService.h
src/stores/: AutoStandbyStore.cpp  AutoStandbyStore.h  AuxBatteryStore.cpp  AuxBatteryStore.h  BatteryStore.cpp  BatteryStore.h  BlinkerCurve.h  BluetoothStore.cpp  BluetoothStore.h  BmxStore.cpp  BmxStore.h  CbBatteryStore.cpp  CbBatteryStore.h  ConnectionStore.cpp  ConnectionStore.h  DashboardStore.cpp  DashboardStore.h  EngineStore.cpp  EngineStore.h  FaultEventStore.cpp  FaultEventStore.h  FaultsStore.cpp  FaultsStore.h  GpsStore.cpp  GpsStore.h  HopOnStore.cpp  HopOnStore.h  InternetStore.cpp  InternetStore.h  LocaleStore.cpp  LocaleStore.h  MenuStore.cpp  MenuStore.h  NavigationStore.cpp  NavigationStore.h  OtaStore.cpp  OtaStore.h  RecentDestinationsStore.cpp  RecentDestinationsStore.h  SavedLocationsStore.cpp  (+25 more)
src/utils/: FaultFormatter.cpp  FaultFormatter.h
